# sudoku-solver

./: README.md  pyproject.toml  sudoku.py
tests/: test_sudoku.py
