[project]
name = "sudoku-solver"
version = "0.1.0"
description = ""
authors = [
    {name = "Eager Tom",email = "thomas.eldridge@meteoblue.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy (>=2.2.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
